// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.position.v1;

import "standard/money/v1/money.proto";

// Position represents an open position as reported by IBKR.
message Position {
  // The ticker symbol.
  string symbol = 1;
  // The security description.
  string description = 2;
  // The asset category (e.g., "STK", "OPT").
  string asset_category = 3;
  // The number of shares or contracts held.
  int64 quantity = 4;
  // The cost basis price per share.
  standard.money.v1.Money cost_basis_price = 5;
  // The current market price per share.
  standard.money.v1.Money market_price = 6;
  // The total market value of the position.
  standard.money.v1.Money market_value = 7;
  // The unrealized P&L computed by IBKR using FIFO.
  standard.money.v1.Money fifo_pnl_unrealized = 8;
  // The currency code for this position.
  string currency = 9;
}

// Positions wraps a list of positions for top-level JSON serialization.
message Positions {
  // The list of positions.
  repeated Position positions = 1;
}
