// Copyright 2026 Peter Edge
//
// All rights reserved.

syntax = "proto3";

package ibctl.trade.v1;

import "standard/money/v1/money.proto";
import "standard/time/v1/date.proto";

// Trade represents a single trade execution from IBKR.
message Trade {
  // The unique trade identifier from IBKR.
  string trade_id = 1;
  // The date the trade was executed.
  standard.time.v1.Date trade_date = 2;
  // The date the trade was settled.
  standard.time.v1.Date settle_date = 3;
  // The ticker symbol.
  string symbol = 4;
  // The security description.
  string description = 5;
  // The asset category (e.g., "STK", "OPT").
  string asset_category = 6;
  // Whether this is a buy or sell ("BUY" or "SELL").
  string buy_sell = 7;
  // The number of shares or contracts traded.
  int64 quantity = 8;
  // The price per share or contract.
  standard.money.v1.Money trade_price = 9;
  // The total trade proceeds.
  standard.money.v1.Money proceeds = 10;
  // The commission paid for this trade.
  standard.money.v1.Money commission = 11;
  // The currency code for this trade.
  string currency = 12;
  // The realized P&L computed by IBKR using FIFO.
  standard.money.v1.Money fifo_pnl_realized = 13;
}

// Trades wraps a list of trades for top-level JSON serialization.
message Trades {
  // The list of trades.
  repeated Trade trades = 1;
}
